# TradingAgentsCrypto

./: .gitignore  README.md  main.py  pyproject.toml  tradingagents.defaults.json
cli/: display.py  main.py  message_buffer.py  models.py  profile.py  reporting.py  runtime.py  utils.py
tests/: test_cli_profile.py  test_cli_runtime.py  test_crypto_symbol_formats.py  test_research_roles.py  test_signal_processing.py  test_storage_sqlite.py  test_ticker_symbol_handling.py  test_time_utils.py  test_web_app.py
tradingagents/: default_config.py  time_utils.py
tradingagents/agents/: __init__.py
tradingagents/agents/analysts/: fundamentals_analyst.py  funding_oi_analyst.py  market_analyst.py  news_analyst.py  sentiment_analyst.py  social_media_analyst.py  tokenomics_analyst.py
tradingagents/agents/managers/: decision_engine.py  portfolio_manager.py  research_manager.py  setup_classifier.py
tradingagents/agents/researchers/: bear_researcher.py  bull_researcher.py
tradingagents/agents/risk_mgmt/: aggressive_debator.py  conservative_debator.py  neutral_debator.py  portfolio_risk_analyst.py  trade_risk_analyst.py
tradingagents/agents/trader/: trader.py
tradingagents/agents/utils/: agent_states.py  agent_utils.py  crypto_news_tools.py  market_data_tools.py  memory.py  technical_indicators_tools.py  tokenomics_tools.py
tradingagents/dataflows/: interface.py
tradingagents/dataflows/providers/: __init__.py  binance_provider.py  coingecko_provider.py  crypto_common.py  crypto_news_provider.py  hyperliquid_provider.py
tradingagents/graph/: conditional_logic.py  propagation.py  reflection.py  setup.py  signal_processing.py  trading_graph.py
tradingagents/llm_clients/: codex_exec_client.py  factory.py  model_catalog.py  validators.py
tradingagents/services/: __init__.py  analysis_service.py
tradingagents/storage/: __init__.py  sqlite_repository.py
tradingagents/web/: app.py
tradingagents/web/static/: app.css
tradingagents/web/templates/: base.html  loops.html  run_detail.html  (+1 more)
